tests/compile_fail/try_catch_lifetimes.stderr
error[E0597]: `try_catch` does not live long enough
  --> $DIR/try_catch_lifetimes.rs:11:14
   |
9  |   let _leaked = {
   |       ------- borrow later stored here
10 |     let mut try_catch = v8::TryCatch::new(scope);
11 |     let tc = try_catch.enter();
   |              ^^^^^^^^^ borrowed value does not live long enough
...
16 |   };
   |   - `try_catch` dropped here while still borrowed
